新增添加到手机屏幕图标配置

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     name="viewport"
   />
   <link href="/favicon.ico" rel="icon"/>
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="/192.png">
   <title><%= title %></title>
 </head>
 <body>
