新增添加网页到桌面图标配置

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     name="viewport"
   />
   <link href="/favicon.ico" rel="icon"/>
-  <title><%= title %></title>
+  <link rel="apple-touch-icon" href="/192.png">
+  <title>佳海CRM</title>
 </head>
 <body>
 <div id="appProvider" style="display: none"></div>
